# ModSecurity-CMake

./: .gitignore  CMakeLists.txt  README.md  configure.ac  modsecurity.pc  vcpkg.json
cmake/: FindPCRE.cmake  FindPCRE2.cmake  FindYajl.cmake
examples/: CMakeLists.txt
examples/multiprocess_c/: CMakeLists.txt
examples/reading_logs_via_rule_message/: CMakeLists.txt
examples/reading_logs_with_offset/: CMakeLists.txt
examples/simple_example_using_c/: CMakeLists.txt
examples/using_bodies_in_chunks/: CMakeLists.txt
others/libinjection-cmake/: CMakeLists.txt
others/mbedtls/: CMakeLists.txt
src/: CMakeLists.txt  config.h  config.h.in
src/parser/: CMakeLists.txt
